--- a/index.html
+++ b/index.html
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <title>Vignesh Anil- Portfolio</title>
+    <title>Abishek- Portfolio</title>
     <style>
         body {
             font-family: Arial, sans-serif;
@@ -93,8 +93,8 @@
     <header>
         <div class="header-content">
             <img src="sample.jpeg" alt="Sample Profile Picture" class="profile-picture">
-            <h1>Vignesh Anil</h1>
-            <p>Building something</p>
+            <h1>Abishek S S</h1>
+            <p>Student..</p>
         </div>
     </header>
 
@@ -111,7 +111,7 @@
     <section id="about">
         <div class="section-content">
             <h2>About Me</h2>
-            <p>Hello I'm Vignesh Anil and I'm a computer science student.</p>
+            <p>Hello I'm Abishek and I'm a computer science student.</p>
         </div>
     </section>
 
@@ -126,7 +126,7 @@
         <div class="section-content">
             <h2>Skills</h2>
             <ul>
-                <li>Python</li>
+                <li>Communication</li>
                 <li>Javascript</li>
                 <li>Web Development</li>
                 <li>C++</li>
@@ -156,7 +156,7 @@
     </section>
 
     <footer>
-        <p>&copy; 2023 vzzyxn</p>
+        <p>&copy; abhichdbu@2023</p>
     </footer>
 
     <script>
