--- a/index.html
+++ b/index.html
@@ -92,7 +92,7 @@
 <body>
     <header>
         <div class="header-content">
-            <img src="sample.jpeg" alt="Sample Profile Picture" class="profile-picture">
+            <img src="sample.jpg" alt="Sample Profile Picture" class="profile-picture">
             <h1>Abishek S S</h1>
             <p>Student..</p>
         </div>
